# ai-python

./: .env.example  README.md  main.py  pyproject.toml
app/: main.py  models.py  rag.py
app/routers/: support.py
chroma_db/: chroma.sqlite3
frontend/: index.html
