[project]
name = "ai-python-bootcamp"
version = "0.1.0"
description = "Phase 0: Python Mastery for AI Engineer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true