[project]
name = "ai-python-bootcamp"
version = "0.1.0"
description = "Phase 0: Python Mastery for AI Engineer"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "chromadb>=1.5.7",
    "sentence-transformers>=5.4.0",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
